--- a/app/src/main/res/layout/list_item_test_result.xml
+++ b/app/src/main/res/layout/list_item_test_result.xml
@@ -15,6 +15,15 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
+        <View
+            android:layout_width="0dp"
+            android:layout_height="1dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:background="#454545"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <ImageView
             android:id="@+id/compass_image"
@@ -34,7 +43,7 @@
             android:id="@+id/testResult_id"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
             app:layout_constraintEnd_toStartOf="@+id/compass_image"
@@ -45,10 +54,9 @@
 
         <TextView
             android:id="@+id/gospodarkaLeft_string"
-            app:testResultDate="@{result}"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="8dp"
@@ -56,6 +64,7 @@
             app:layout_constraintEnd_toStartOf="@+id/compass_image"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/testResult_id"
+            app:testResultDate="@{result}"
             tools:text="LICZBA GOSPODARKA LEFT" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
